[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "rich>=15.0.0",
]

[tool.uv.workspace]
members = [
    "packages/environments",
    "packages/agents",
    "packages/policies",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "packages/agents/tests",
    "packages/environments/tests",
    "packages/policies/tests",
]
